--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -40,7 +40,7 @@
                                     <a href="#"
                                        class="dropdown-item d-flex flex-column align-items-center justify-content-center wd-70 ht-70"><i
                                             data-feather="message-square" class="icon-lg mb-1"></i>
-                                        <p class="tx-12" th:text="#{kafka.eagle.header.chatgpt}">ChatGPT</p></a>
+                                        <p class="tx-12" th:text="#{kafka.eagle.header.chatgpt}">AI助手</p></a>
                                 </div>
                                 <div class="col-3 text-center">
                                     <a href="#"
