--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -248,37 +248,34 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-baseline">
-                                <h6 class="card-title mb-0" th:text="#{kafka.eagle.dataspace.dashboard.topic.title}">
-                                    Cloud
-                                    storage</h6>
+                                <h6 class="card-title mb-0" th:text="#{kafka.eagle.dataspace.dashboard.topic.title}"></h6>
                                 <div class="dropdown mb-2">
                                     <button class="btn p-0" type="button" id="dropdownMenuButton6"
                                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-lg text-muted pb-3px" data-feather="more-horizontal"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
-                                        <a class="dropdown-item d-flex align-items-center" href="javascript:;"><i
+                                        <a class="dropdown-item d-flex align-items-center" href="/topic/manage"><i
                                                 data-feather="eye" class="icon-sm me-2"></i> <span class=""
                                                                                                    th:text="#{kafka.eagle.dataspace.dashboard.view}">View</span></a>
                                     </div>
                                 </div>
                             </div>
-                            <div id="storageChart2"></div>
+                            <div id="efak_dashboard_topic_scatter"></div>
                             <div class="row mb-3">
                                 <div class="col-6 d-flex justify-content-end">
                                     <div>
                                         <label class="d-flex align-items-center justify-content-end tx-10 text-uppercase fw-bolder"
-                                               th:text="#{kafka.eagle.dataspace.dashboard.topic.active}">Total
-                                            storage <span class="p-1 ms-1 rounded-circle bg-secondary"></span></label>
-                                        <h5 class="fw-bolder mb-0 text-end">20</h5>
+                                               th:text="#{kafka.eagle.dataspace.dashboard.topic.active}"><span class="p-1 ms-1 rounded-circle bg-secondary"></span></label>
+                                        <h5 id="efak_dashboard_topic_scatter_active" class="fw-bolder mb-0 text-end">0</h5>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div>
                                         <label class="d-flex align-items-center tx-10 text-uppercase fw-bolder"
                                                th:text="#{kafka.eagle.dataspace.dashboard.topic.standby}"><span
-                                                class="p-1 me-1 rounded-circle bg-primary"></span> Used storage</label>
-                                        <h5 class="fw-bolder mb-0">5</h5>
+                                                class="p-1 me-1 rounded-circle bg-primary"></span></label>
+                                        <h5 id="efak_dashboard_topic_scatter_standby" class="fw-bolder mb-0">0</h5>
                                     </div>
                                 </div>
                             </div>
@@ -287,25 +284,25 @@
                                 <br/>
                                 <p>0B-100MB</p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                         role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0"
-                                         aria-valuemax="100">70%
+                                    <div id="efak_dashboard_topic_scatter_mb" class="progress-bar progress-bar-striped progress-bar-animated"
+                                         role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0"
+                                         aria-valuemax="100">0%
                                     </div>
                                 </div>
                                 <br/>
                                 <p>100MB-10GB</p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                         role="progressbar" style="width: 40%" aria-valuenow="10" aria-valuemin="0"
-                                         aria-valuemax="100">40%
+                                    <div id="efak_dashboard_topic_scatter_gb" class="progress-bar progress-bar-striped progress-bar-animated"
+                                         role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0"
+                                         aria-valuemax="100">0%
                                     </div>
                                 </div>
                                 <br/>
                                 <p>10GB+</p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                         role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0"
-                                         aria-valuemax="100">10%
+                                    <div id="efak_dashboard_topic_scatter_tb" class="progress-bar progress-bar-striped progress-bar-animated"
+                                         role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0"
+                                         aria-valuemax="100">0%
                                     </div>
                                 </div>
                             </div>
@@ -316,24 +313,23 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-baseline mb-2">
-                                <h6 class="card-title mb-0" th:text="#{kafka.eagle.dataspace.dashboard.topic.table}">
-                                    Projects</h6>
+                                <h6 class="card-title mb-0" th:text="#{kafka.eagle.dataspace.dashboard.topic.table}"></h6>
                                 <div class="dropdown mb-2">
                                     <button class="btn p-0" type="button" id="dropdownMenuButton7"
                                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-lg text-muted pb-3px" data-feather="more-horizontal"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton7">
-                                        <a class="dropdown-item d-flex align-items-center" href="javascript:;"><i
+                                        <a class="dropdown-item d-flex align-items-center topic-scatter-rank" data-param="logsize" href="javascript:;"><i
                                                 data-feather="chevrons-down" class="icon-sm me-2"></i> <span class=""
                                                                                                              th:text="#{kafka.eagle.dataspace.dashboard.topic.table.logsize.doc}"></span></a>
-                                        <a class="dropdown-item d-flex align-items-center" href="javascript:;"><i
+                                        <a class="dropdown-item d-flex align-items-center topic-scatter-rank" data-param="capacity" href="javascript:;"><i
                                                 data-feather="chevrons-down" class="icon-sm me-2"></i> <span class=""
                                                                                                              th:text="#{kafka.eagle.dataspace.dashboard.topic.table.capacity.doc}"></span></a>
-                                        <a class="dropdown-item d-flex align-items-center" href="javascript:;"><i
+                                        <a class="dropdown-item d-flex align-items-center topic-scatter-rank" data-param="byte_in" href="javascript:;"><i
                                                 data-feather="chevrons-down" class="icon-sm me-2"></i> <span class=""
                                                                                                              th:text="#{kafka.eagle.dataspace.dashboard.topic.table.bytein.doc}"></span></a>
-                                        <a class="dropdown-item d-flex align-items-center" href="javascript:;"><i
+                                        <a class="dropdown-item d-flex align-items-center topic-scatter-rank" data-param="byte_out" href="javascript:;"><i
                                                 data-feather="chevrons-down" class="icon-sm me-2"></i> <span class=""
                                                                                                              th:text="#{kafka.eagle.dataspace.dashboard.topic.table.byteout.doc}"></span></a>
                                     </div>
@@ -356,7 +352,7 @@
                                             th:text="#{kafka.eagle.dataspace.dashboard.topic.table.byteout}"></th>
                                     </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="efak_dashboard_topic_scatter_tbody">
                                     <tr>
                                         <td>1</td>
                                         <td>NobleUI jQuery</td>
