--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -16,7 +16,7 @@
                     <div class="submenu">
                         <ul class="submenu-item">
                             <li class="nav-item"><a class="nav-link" href="/clusters/manage" th:text="#{kafka.eagle.dataspace.dashboard}">Dashboard</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.dataspace.tv}">TV</a></li>
+<!--                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.dataspace.tv}">TV</a></li>-->
                         </ul>
                     </div>
                 </li>
@@ -33,14 +33,14 @@
                             <li class="nav-item"><a class="nav-link" href="/topic/manage" th:text="#{kafka.eagle.topics.manager}">Manager</a></li>
                             <li class="nav-item"><a class="nav-link" href="#" th:utext="#{kafka.eagle.topics.ksql}">KSQL</a></li>
                             <li class="nav-item"><a class="nav-link" href="/topic/mock" th:text="#{kafka.eagle.topics.mock}">Mock</a></li>
-                            <span sec:authorize="isAuthenticated()">
-                                <span sec:authorize="hasRole('ADMIN')">
-                                    <li class="category-heading" th:text="#{kafka.eagle.topics.metadata}">Metadata<li>
-                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.metadata.op}">MetadataOp</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance}">Balance</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance.job}">Job</a></li>
-                                </span>
-                            </span>
+<!--                            <span sec:authorize="isAuthenticated()">-->
+<!--                                <span sec:authorize="hasRole('ADMIN')">-->
+<!--                                    <li class="category-heading" th:text="#{kafka.eagle.topics.metadata}">Metadata<li>-->
+<!--                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.metadata.op}">MetadataOp</a></li>-->
+<!--                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance}">Balance</a></li>-->
+<!--                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance.job}">Job</a></li>-->
+<!--                                </span>-->
+<!--                            </span>-->
                         </ul>
                     </div>
                 </li>
@@ -66,7 +66,7 @@
                     <div class="submenu">
                         <ul class="submenu-item">
                             <li class="nav-item"><a class="nav-link" href="/clusters/kafka" th:text="#{kafka.eagle.clusters.kafka}">Kafka</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/clusters/server" th:text="#{kafka.eagle.clusters.server}">Server</a></li>
+<!--                            <li class="nav-item"><a class="nav-link" href="/clusters/server" th:text="#{kafka.eagle.clusters.server}">Server</a></li>-->
                             <li class="nav-item"><a class="nav-link" href="/clusters/manage" th:text="#{kafka.eagle.clusters.manager}">Manager</a></li>
                         </ul>
                     </div>
@@ -97,8 +97,8 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.plugins.connector}">Connectors</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.plugins.worker}">Workers</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.plugins.connector}">Connectors</a></li>
+<!--                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.plugins.worker}">Workers</a></li>-->
                         </ul>
                     </div>
                 </li>
@@ -110,8 +110,9 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.config}">Config</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.info}">Info</a></li>
+                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.channel}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.config}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.info}"></a></li>
                         </ul>
                     </div>
                 </li>
@@ -125,8 +126,7 @@
                         <ul class="submenu-item">
                             <span sec:authorize="isAuthenticated()">
                                 <span sec:authorize="hasRole('ADMIN')">
-                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.user}"></a></li>
-                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.role}"></a></li>
+                                    <li class="nav-item"><a class="nav-link" href="/system/user" th:text="#{kafka.eagle.system.user}"></a></li>
                                     <li class="nav-item"><a class="nav-link" href="/system/job" th:text="#{kafka.eagle.system.job}"></a></li>
                                 </span>
                             </span>
