add alert channel

--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -110,9 +110,9 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.channel}"></a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.config}"></a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.alert.info}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="/alert/channel" th:text="#{kafka.eagle.alert.channel}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="/alert/config" th:text="#{kafka.eagle.alert.config}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="/alert/info" th:text="#{kafka.eagle.alert.info}"></a></li>
                         </ul>
                     </div>
                 </li>
